--- a/index.html
+++ b/index.html
@@ -1,6 +1,37 @@
+<!doctype html>
 <html>
-	<head>Test</head>
-	<body>Test</body>
+<head>
+<script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+<link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/>
+<py-env>
+- numpy
+- matplotlib
+- paths:
+  - ./pycode/example.py
+  - ./pycode/package
+</py-env>
+</head>
+  
+<body>    
+    
+<div id="lineplot"></div>
 
+<py-script>
+from example import myplot
+import matplotlib.pyplot as plt
 
+theta,r = myplot(4)
+
+fig, ax = plt.subplots(
+  subplot_kw = {'projection': 'polar'} 
+)
+ax.plot(theta, r)
+ax.set_rticks([0.5, 1, 1.5, 2])
+ax.grid(True)
+
+pyscript.write('lineplot',fig)
+
+</py-script>
+
+</body>
 </html>
