Changing some library stuff

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 - scipy
 - paths:
   - ./pycode/example.py
-  - ./src/channels
-  - ./src/modems
+  - ./src/channels.py
+  - ./src/modems.py
 </py-env>
 </head>
   
