--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 <py-script>
 
-import channels
-import modems
+from channels import *
+from modems import *
 
 ask_2 = modems.ldapm(mod_type='ask', mod_order = 2)
 
