--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	- src/modems.py
 </py-env>
 <py-script>
+print("HERE")
 import modems
 ask_2 = modems.ldapm(mod_type='ask', mod_order = 2)
 print(ask_2)
