--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   
 <body>    
     
-<py-env>
+<py-config>
 - matplotlib
 - numpy
 - paths:
 	- src/channels.py
 	- src/modems.py
-</py-env>
+</py-config>
 <py-script>
 print("HERE")
 import modems
