--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
   
 <body>    
     
-<py-config>
-- matplotlib
-- numpy
-- paths:
-	- src/channels.py
-	- src/modems.py
-</py-config>
 <py-script>
-print("HERE")
+print("HERE2")
 import modems
 ask_2 = modems.ldapm(mod_type='ask', mod_order = 2)
 print(ask_2)
