--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!doctype html>
 <html>
 <head>
-<script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-<link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/>
+<script defer src="https://pyscript.net/releases/2022.12.1/pyscript.js"></script>
+<link rel="stylesheet" href="https://pyscript.net/releases/2022.12.1/pyscript.css"/>
 </head>
-  
 <body>    
+    <py-config>
+        packages = ['numpy', 'matplotlib']
+
+        [[fetch]]
+        files = ['__init__.py', 'example.py']
+        from = 'package'
+        to_folder = 'package'
+    </py-config>
     
+<div id="lineplot"></div>
+
 <py-script>
-print("HERE2")
-import modems
-ask_2 = modems.ldapm(mod_type='ask', mod_order = 2)
-print(ask_2)
+from package.example import myplot
+import matplotlib.pyplot as plt
 
+theta,r = myplot(4)
+
+fig, ax = plt.subplots(
+  subplot_kw = {'projection': 'polar'} 
+)
+ax.plot(theta, r)
+ax.set_rticks([0.5, 1, 1.5, 2])
+ax.grid(True)
+
+pyscript.write('lineplot',fig)
 </py-script>
-
 
 </body>
 </html>
