--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         packages = ['numpy', 'matplotlib']
 
         [[fetch]]
-        files = ['example.py']
+        files = ['__init__.py', 'example.py']
         from = 'package'
         to_folder = 'package'
     </py-config>
