--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <script defer src="https://pyscript.net/releases/2022.12.1/pyscript.js"></script>
 <link rel="stylesheet" href="https://pyscript.net/releases/2022.12.1/pyscript.css"/>
 </head>
+<div>TEST</div>
 <body>    
     <py-config>
         packages = ['numpy', 'matplotlib']
