--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <script defer src="https://pyscript.net/releases/2022.12.1/pyscript.js"></script>
 <link rel="stylesheet" href="https://pyscript.net/releases/2022.12.1/pyscript.css"/>
 </head>
-<div>TEST</div>
+<div>TEST2</div>
 <body>    
     <py-config>
         packages = ['numpy', 'matplotlib']
 
         [[fetch]]
-        files = ['__init__.py', 'example.py']
+        files = ['example.py']
         from = 'package'
         to_folder = 'package'
     </py-config>
